corpus/cpp/template/case-02/snapshots/gcc15/render.default.txt
error: template instantiation failed
--> src/main.cpp:6:5
help: start from the first user-owned template frame and match template arguments
why: no matching function for call to 'expect_ptr(int&)'
| src/main.cpp:6:5
|     expect_ptr(value);
|     ^
while instantiating:
  - src/main.cpp:2:6 candidate 1: 'template<class T> void expect_ptr(T*)'
omitted 2 internal template frames
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output